--- a/OS-Injection/level2.html
+++ b/OS-Injection/level2.html
@@ -131,5 +131,31 @@
             </tr>
         </table>
     </div>
+    <div class="container">
+            Diese Tabelle gibt nur ein kleine Übersicht sie ist nicht vollständig.
+            <table>
+                <tr>
+                    <th>Operator</th><th>Funktion</th>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">Unix und Windows</td>
+                </tr>
+                <tr>
+                    <td>A & B<td>Run A then B regardless of success of A</td>
+                </tr>
+                <tr>
+                    <td>A && B</td><td>Run B if and only if A succeeded</td>
+                </tr>
+                <tr>
+                    <td>A || B</td><td>Run B if and only if A failed</td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">Unix only</td>
+                </tr>
+                <tr>
+                    <td>A ; B</td><td>Run A and then B, regardless of success of A</td>
+                </tr>
+            </table>
+        </div>
 </body>
 </html>
