--- a/OS-Injection/level3.html
+++ b/OS-Injection/level3.html
@@ -133,13 +133,13 @@
     </script>
 
     <div class="container">
-        Gib zu allererst einen Benutzernamen ein, um deinen eigenen Wrokspace zu erstellen.<br>
+        Gib zu allererst einen Benutzernamen ein, um deinen eigenen Workspace zu erstellen.<br>
         Ja, der Name ist völlig egal.<br>
         Auch diesmal liegt die Flagge wieder auf dem Server als Textdatei.<br>
-        Lies die Datei aus und du wirst die Flagge ersthalten.<br>
-        Finde heraus, welches der Felder für eine OS-Injection angreifbar sind<br>
+        Lies die Datei aus und du wirst die Flagge erhalten.<br>
+        Finde heraus, welches der Felder für eine OS-Injection angreifbar ist<br>
         und versuche dann die Flagge zu finden. <br>
-        Ach Ja die Bulletpoints unter dem Textfild sind Dateien. Klickt darauf und ladet den Inhalt.<br>       
+        Ach ja, die Bulletpoints unter dem Textfeld sind Dateien. Klickt darauf und ladet den Inhalt.<br>       
         Zur Hilfe findet Ihr unter der Aufgabe eine kleine Tabelle.<br>
         Viel Erfolg!
     </div>
@@ -214,5 +214,31 @@
             </tr>
         </table>
     </div>
+    <div class="container">
+            Diese Tabelle gibt nur ein kleine Übersicht sie ist nicht vollständig.
+            <table>
+                <tr>
+                    <th>Operator</th><th>Funktion</th>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">Unix und Windows</td>
+                </tr>
+                <tr>
+                    <td>A & B<td>Run A then B regardless of success of A</td>
+                </tr>
+                <tr>
+                    <td>A && B</td><td>Run B if and only if A succeeded</td>
+                </tr>
+                <tr>
+                    <td>A || B</td><td>Run B if and only if A failed</td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">Unix only</td>
+                </tr>
+                <tr>
+                    <td>A ; B</td><td>Run A and then B, regardless of success of A</td>
+                </tr>
+            </table>
+        </div>
 </body>
 </html>
