quick update beschreibung

--- a/OS-Injection/level3.html
+++ b/OS-Injection/level3.html
@@ -215,7 +215,7 @@
         </table>
     </div>
     <div class="container">
-            Diese Tabelle gibt nur ein kleine Übersicht sie ist nicht vollständig.
+            Diese Tabelle gibt nur eine kleine Übersicht, sie ist nicht vollständig.
             <table>
                 <tr>
                     <th>Operator</th><th>Funktion</th>
