--- a/OS-Injection/level2.html
+++ b/OS-Injection/level2.html
@@ -132,7 +132,7 @@
         </table>
     </div>
     <div class="container">
-            Diese Tabelle gibt nur ein kleine Übersicht sie ist nicht vollständig.
+            Diese Tabelle gibt nur eine kleine Übersicht, sie ist nicht vollständig.
             <table>
                 <tr>
                     <th>Operator</th><th>Funktion</th>
